--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Good and evil'
 - !lcsh 'Devil'
 - !lcc 'BT'
+- GITenberg
 title: Is the Devil a Myth?
 url: http://www.gutenberg.org/ebooks/43205
